<resources>
    <string name="app_name">ListaCompra</string>
    <string name="nome">Nome</string>
    <string name="pre_o">Preço</string>
    <string name="local_barato">Local Barato</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="mensagem">Mensagem</string>
    <string name="nome_da_lista">Nome da lista</string>
    <string name="email_a_enviara_lista">Email a enviara lista</string>
    <string name="telefone_a_enviar_a_lista">Telefone a enviar a lista</string>
    <string name="mensagem_de_texto_da_lista">Mensagem de texto da lista</string>
    <string name="produto">Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="facebook_app_id">293130587696624</string>
    <string name="bt_contato">Contato</string>
    <string name="txt_autor">Luiz Rafael Culik Guimaraes</string>
    <string name="txt_copyright">Luiz Rafael Culik Guimaraes</string>
    <string name="txt_concepcao">Lista de compras</string>
    <string name="txt_design">oo</string>
    <string name="txt_gold">ouro</string>
    <string name="txt_desenvolvimento">Luiz Culik</string>
    <string name="txt_producao" />
    <string name="title_activity_about">Sobre</string>
    <string name="txt_versao">1.0</string>
    <string name="txt_email">culikr@gmail.com</string>
    <string name="txt_email_assunto">Lista Comora mobile</string>
    <string name="activity_settings_notification_section_title">Configurações</string>
    <string name="cabecalho_mensagem">Cabecalho mensagem</string>
    <string name="rodape_mensagem">Rodape mensagem</string>
    <string name="cabecalho_email">Cabecalho Email</string>
    <string name="rodape_email">Rodape email</string>
    <string name="title_listacompra_list">listacompras</string>
    <string name="title_listacompra_detail">listacompra Detail</string>
    <string name="envia_mercado_automatico">Envia Mercado Automatico</string>
    <string name="envia_produto_automatico">Envia Produto Automatico</string>

    <string-array name="nav_drawer_items">
        <item>Sobre</item>
        <item>Configuraçao</item>
        <item>Mercados</item>

        <!-- <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item> -->
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/button_info_icon</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/cart_icon</item>
        <!--
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        -->

    </array>
    <string name="title_activity_cadastra_mercado">Map</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="codigo_de_barras">Codigo de barras</string>
    <string name="endereco">Endereco</string>
    <string name="procura">Procura</string>
    <string name="mercados">Mercado</string>
    <string name="gps_usa_local_atual">GPS Usa Local Atual</string>
    <string name="envia_email">Envia Email</string>
    <string name="envia_whats">Envia Whats</string>
    <string name="envia_sms">Envia Sms</string>
    <string name="usa_facebook">Usa Facebook</string>
</resources>
