<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edNome"
        android:hint="@string/nome_da_lista"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edEmail"
        android:hint="@string/email_a_enviara_lista"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/telefone"
        android:id="@+id/textView6" android:layout_marginTop="10dp" />

    <culik.br.com.listacompra.utils.utils.PhoneEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edTelefone"
        android:hint="@string/telefone_a_enviar_a_lista"  android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Mensagem"
        android:id="@+id/textView7"  android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edMensagem"
        android:layout_weight="0.33"
        android:hint="@string/mensagem_de_texto_da_lista"  android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mercados"
        android:id="@+id/textView3"
      />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:inputType="text" />



    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false"
        android:longClickable="false"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:id="@+id/edicao_botaoCancelar"
            android:onClick="cancelarEdicao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:id="@+id/edicao_botaoEditar"
            android:onClick="editarListaCompra" />
    </LinearLayout>

</LinearLayout>