<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Configuracao"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="24dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/activity_settings_notification_section_title"
                android:textColor="@color/purple_vivo"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usa_facebook"
                    android:id="@+id/checkBox"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/envia_sms"
                    android:id="@+id/checkBox2"
                    android:layout_below="@+id/checkBox"
                    android:layout_alignParentStart="true"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/envia_whats"
                    android:id="@+id/checkBox3"
                    android:layout_below="@+id/checkBox2"
                    android:layout_alignParentStart="true"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/envia_email"
                    android:id="@+id/checkBox4"
                    android:layout_below="@+id/checkBox3"
                    android:layout_alignParentStart="true"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/envia_produto_automatico"
                    android:id="@+id/checkBox5"
                    android:checked="false"
                    android:layout_below="@+id/checkBox4"
                    android:layout_alignParentStart="true" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/envia_mercado_automatico"
                    android:id="@+id/checkBox6"
                    android:checked="false"
                    android:layout_below="@+id/checkBox5"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_usa_local_atual"
                    android:id="@+id/checkBox7"
                    android:checked="false"
                    android:layout_below="@+id/checkBox6"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cabecalho_mensagem"
                    android:id="@+id/textView10"
                    android:layout_below="@+id/checkBox7"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:layout_below="@+id/textView10"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rodape_mensagem"
                    android:id="@+id/textView11"
                    android:layout_below="@+id/editText5"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText6"
                    android:layout_below="@+id/textView11"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cabecalho_email"
                    android:id="@+id/textView12"
                    android:layout_below="@+id/editText6"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText7"
                    android:layout_below="@+id/textView12"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rodape_email"
                    android:id="@+id/textView13"
                    android:layout_below="@+id/editText7"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText8"
                    android:layout_below="@+id/textView13"
                    android:layout_alignParentStart="true" />





            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
