<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_compra"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/lbl_versao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:fontFamily="roboto_bold"
                    android:padding="@dimen/view_about_text_padding" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/view_separator_margin"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"
                    android:fontFamily="roboto_bold"
                    android:text="@string/txt_concepcao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:fontFamily="roboto_light"
                    android:text="@string/txt_gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"
                    android:fontFamily="roboto_bold"
                    android:text="@string/txt_producao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"

                    android:text="@string/txt_gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"

                    android:text="@string/txt_design" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"

                    android:text="@string/txt_gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"

                    android:text="@string/txt_desenvolvimento" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"

                    android:text="" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/view_separator_margin"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/view_about_text_padding"
                    android:textColor="@android:color/black"

                    android:text="@string/txt_copyright" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:fontFamily="roboto_light"
                    android:text="@string/txt_autor" />

                <Button
                    android:id="@+id/bt_contato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="30dp"
                    android:text="@string/bt_contato"
                    android:textSize="18sp"
                    android:background="@drawable/blue_button_background" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>