<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="culik.br.com.listacompra.ui.Cadastro_Produto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_o"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="43dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_barato"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="43dp"
        android:inputType="text" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false"
        android:longClickable="false"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/editText3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:id="@+id/edicao_botaoCancelar"
            android:onClick="cancelarEdicao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:id="@+id/edicao_botaoEditar"
            android:onClick="editarProduto" />
    </LinearLayout>
</RelativeLayout>
